<resources>
    <string name="app_name">AI Chatbot</string>
    <string name="click_here_to_start_the_chat">Click here to start the chat</string>
    <string name="fast_ai">Fast AI</string>
    <string name="you_can_ask_anything">You can ask anything...</string>
    <string name="ask_questions">Ask Questions...</string>
    <string name="explain_how_internet_works_for_6_year_old">“Explain how internet works for 6 year old”</string>
    <string name="why_is_the_sky_blue">“Why is the sky blue?”</string>
    <string name="got_any_creative_ideas_for_a_5_year_old_s_birthday">“Got any creative ideas for a 5 year old’s birthday?”</string>
    <string name="write">Write...</string>
    <string name="next">Next</string>
    <string name="this_app_can_write_amp_understand_n_human_like_language_really_well_n_it_s_super_fast_amp_accurate"><![CDATA[This app can write & understand \n human-like language really well.\n It\'s super fast & accurate.]]></string>
    <string name="powered_by_latest_ai_tech">Powered by Latest AI tech</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_any_questions">Ask any questions</string>
    <string name="you_can_get_the_answers_of_any_questions_in_your_mind_related_with_work_study_or_life_in_general">You can get the answers of any questions in your mind related with work, study or life in general</string>
    <string name="save_everything_on_a_thread">Save everything on a thread</string>
    <string name="save_your_previous_questions_amp_answers_into_a_thread_use_search_to_find_the_right_info_at_right_time"><![CDATA[Save your previous questions & answers into a thread, use search to find the right info at right time.]]></string>
    <string name="get_started">Get Started</string>
    <string name="thread">Thread</string>
    <string name="write_question">Write Question</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="Speak">Speak</string>
    <string name="share">Share</string>
    <string name="clear_history">Clear History</string>
    <string name="are_you_sure_you_want_to_clear_the_history">Are you sure you want to clear the history</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="font_size">Font Size</string>
    <string name="shareApp">Share app</string>
    <string name="tts_speed">Text to speech speed</string>
    <string name="you_have_3_free_message_left">You have 10 free message left</string>
    <string name="go_pro">Go Pro</string>
    <string name="data_is_not_found">Data is not found</string>
    <string name="unlimited_answers">Unlimited answers</string>
    <string name="try_for_free">Try for free</string>
    <string name="unlimited_answers_amp_questions"><![CDATA[Unlimited answers & Questions]]></string>
    <string name="best_app_experience">Best app experience</string>
    <string name="_4x_faster_processing">4x Faster processing</string>
    <string name="more_detailed_responses">More detailed responses</string>
    <string name="_3_day_trial_auto_renews_at_week_no_commitment_cancel_any_time_full_access_to_app_and_all_features_no_extra_charge_for_any_features">  day trial auto-renews at $   /monthly. No commitment. Cancel any time. Full access to app and all features, no extra charge for any features.</string>
    <string name="restore">Restore</string>
    <string name="privacy_and_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="out_of_free_messages">Your free message quota has been reached. A subscription is required to continue using the app.\n\nWe want to provide you with the best possible search experience with latest AI technology. However, generating human-like search results comes at a significant cost, which is why we require a subscription for full access.</string>
</resources>