<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="420dp"
    android:layout_gravity="center"
    android:background="@drawable/clear_history_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/clear_history"
        android:textColor="@color/black1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/emptyList"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/empty_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/sureTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_clear_the_history"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyList" />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/yes_bg"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/white1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sureTXT" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/no_bg"
        android:text="@string/no"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yesBtn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/noBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>