<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:layout_gravity="bottom"
    android:background="@drawable/bottom_sheet_bg">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:src="@drawable/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/settings"
        android:textColor="@color/black1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/sound"
        android:textColor="@color/black1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/soundSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/soundSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/soundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="28dp"
        android:thumb="@drawable/checked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:track="@drawable/custom_track" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/font_size"
        android:textColor="@color/black1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/sizesSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch"
        app:layout_constraintTop_toTopOf="@+id/sizesSpinner" />

    <Spinner
        android:id="@+id/sizesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:scrollIndicators="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch"
        tools:listitem="@layout/spinner_item" />

    <TextView
        android:id="@+id/clearHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/clear_history"
        android:textColor="@color/black1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizesSpinner" />

    <TextView
        android:id="@+id/shareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/shareApp"
        android:textColor="@color/black1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearHistory" />

    <TextView
        android:id="@+id/ttsSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/tts_speed"
        android:textColor="@color/black1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareApp" />

    <ImageView
        android:id="@+id/turtle"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:rotationY="180"
        android:src="@drawable/turtle"
        app:layout_constraintBottom_toBottomOf="@id/speedSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/speedSeekBar" />

    <ImageView
        android:id="@+id/rabbit"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/rabbit"
        app:layout_constraintBottom_toBottomOf="@id/speedSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/speedSeekBar" />

    <SeekBar
        android:id="@+id/speedSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:max="200"
        android:min="50"
        android:progress="200"
        android:progressDrawable="@drawable/progress_bg"
        android:progressTintMode="src_in"
        android:splitTrack="false"
        android:thumb="@drawable/slider_thumb"
        android:thumbTint="#CFCFCF"
        android:thumbTintMode="src_in"
        app:layout_constraintEnd_toStartOf="@+id/rabbit"
        app:layout_constraintStart_toEndOf="@+id/turtle"
        app:layout_constraintTop_toBottomOf="@+id/ttsSpeed" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/speedSeekBar" />
</androidx.constraintlayout.widget.ConstraintLayout>